force-app/main/default/objects/custom_create297__c/custom_create297__c.object-meta.xml
<CustomObject>
    <label>Custom created object297</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects297</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>