force-app/main/default/objects/custom_create297__c/fields/custom_create_297field634__c.field-meta.xml
<CustomField>
    <fullName>custom_create_297field634__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 297field634</label>
    <type>Checkbox</type>
</CustomField>